MHA-46|refactor/Feat: Update Reset password endpoints and update swagger doc
- updated the forgot password handler to temporarily return the url
- checked the query parameter against the current time to verify the token validity
- updated swagger documentation for all current endpoints

- https://heritageoffaithtech.atlassian.net/browse/MHA-46
-
