# packages/server/pkg/user/transport.go
@@ -2,56 +2,54 @@ package user
 
 import "database/sql"
 
-
 type UserAndToken struct {
-	User 	*User
-	Token  	string
+	User  *User
+	Token string
 }
 
 type UserSession struct {
-	User 		*UserJSON 		`json:"user"`
-	Token 		string 			`json:"token"`
-}
+	User  *UserJSON `json:"user"`
+	Token string    `json:"token"`
+} // @name UserSession
 
 type AddressJSON string
 
 type UserJSON struct {
-	ID  			int 			`json:"id"`
-	Username 		string 			`json:"usernmae"`
-	Password        string 			`json:"password,omitempty"`
-	Email 			string 			`json:"email"`
-	FirstName 		string 			`json:"first_name"`
-	LastName 		string 			`json:"last_name"`
-	Address 		string 			`json:"address,omitempty"`
-	Mobile 			string 			`json:"mobile,omitempty"`
-	Gender 			string 			`json:"gender,omitempty"`
-	IsVerified      IsVerifiedEnum  `json:"is_verified,omitempty"`
-	NewJWTToken 	string			`json:"newToken,omitempty"`
-}
-
+	ID          int            `json:"id"`
+	Username    string         `json:"usernmae"`
+	Password    string         `json:"password,omitempty"`
+	Email       string         `json:"email"`
+	FirstName   string         `json:"first_name"`
+	LastName    string         `json:"last_name"`
+	Address     string         `json:"address,omitempty"`
+	Mobile      string         `json:"mobile,omitempty"`
+	Gender      string         `json:"gender,omitempty"`
+	IsVerified  IsVerifiedEnum `json:"is_verified,omitempty"`
+	NewJWTToken string         `json:"newToken,omitempty"`
+} // @name UserJSON
 
 type LoginRequestJSON struct {
-	Email 		string `json:"email"`
-	Password 	string `json:"password"`
-}
-type SignUpUserRequestJSON struct {
-	FirstName 		string 			`json:"first_name"`
-	LastName 		string 			`json:"last_name"`
-	Email 			string			`json:"email"`
-	Password 		string 			`json:"password"`
-}
+	Email    string `json:"email"`
+	Password string `json:"password"`
+} // @name LoginRequestJSON
 
+type SignUpUserRequestJSON struct {
+	FirstName string `json:"first_name"`
+	LastName  string `json:"last_name"`
+	Email     string `json:"email"`
+	Password  string `json:"password"`
+} // @name SignUpUserRequestJSON
 
 func (u *UserJSON) ToUser() *User {
 	result := &User{
-		ID: u.ID,
-		Email: u.Email,
-		Password: u.Password,
-		UserName: u.Username,
+		ID:        u.ID,
+		Email:     u.Email,
+		Password:  u.Password,
+		UserName:  u.Username,
 		FirstName: u.FirstName,
-		LastName: u.LastName,
-		Address: u.Address,
-		Gender: u.Gender,
+		LastName:  u.LastName,
+		Address:   u.Address,
+		Gender:    u.Gender,
 	}
 
 	if u.Mobile != "" {
@@ -61,26 +59,25 @@ func (u *UserJSON) ToUser() *User {
 }
 
 func (u *SignUpUserRequestJSON) ToSignUpUser() *SignUpUser {
-	result := &SignUpUser{		
-		Email: u.Email,
-		Password: u.Password,
+	result := &SignUpUser{
+		Email:     u.Email,
+		Password:  u.Password,
 		FirstName: u.FirstName,
-		LastName: u.LastName,
+		LastName:  u.LastName,
 	}
 
 	return result
 }
 
-
 func NewJSONUser(u *User) *UserJSON {
 	return &UserJSON{
-		ID: u.ID,
-		Email: u.Email,
+		ID:        u.ID,
+		Email:     u.Email,
 		FirstName: u.FirstName,
-		LastName: u.LastName,
-		Address: u.Address,
-		Mobile: u.Mobile.String,
-		Gender: u.Gender,
-		Username: u.UserName,
+		LastName:  u.LastName,
+		Address:   u.Address,
+		Mobile:    u.Mobile.String,
+		Gender:    u.Gender,
+		Username:  u.UserName,
 	}
 }
